src/components/Table/table.css
.table {
    display: table;
    width: 100%;
    border-collapse: collapse;
}
.table span {
    background-color: transparent;
}
.table__coin {
    height: 64px;
}
.table tr:hover > *:not(th) {
    background-color: #1c1c1e !important;
}
.table tr > * {
    font-family: "DM Mono";
    font-weight: 400;
    font-size: 15px;
    text-align: right;
    white-space: nowrap;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    padding-left: 60px;
    line-height: calc(24 / 16 * 100%);
    color: #ffffff;
}
.table tr > *:nth-child(1),
.table tr > *:nth-child(2) {
    text-align: left;
    position: sticky;
    z-index: 100;
    background: #101012;
}
.table tr > *:nth-child(1) {
    left: 0px;
    padding-left: 0;
    padding-right: 26px;
    text-align: right;
    width: 18px;
}
.table tr > *:nth-child(1) span {
    opacity: 0.5;
}
.table tr > *:nth-child(2) {
    padding-right: 20px;
    padding-left: 0;
    left: 44px;
}
.table tr > *:nth-child(3) {
    min-width: 150px;
    box-sizing: border-box;
    padding-left: 0px;
}
.table tr > :last-child {
    padding: 0;
    padding-left: 50px;
}
.table__head {
    font-family: "DM Sans";
    font-weight: 700;
    font-size: 16px;
    line-height: 150%;
    color: #ffffff;
    height: 48px;
    position: relative;
    z-index: 120;
    vertical-align: middle;
}
.table__body {
    height: 64px;
    display: table-row-group;
    vertical-align: middle;
}
.table__title {
    font-family: "DM Sans" !important;
    font-weight: 700 !important;
    font-size: 16px !important;
    line-height: calc(24 / 16 * 100%) !important;
}
.table__title span {
    margin-left: 22px;
    opacity: 0.5;
}
.table__message {
    height: 64px;
    padding-left: 0 !important;
    left: auto !important;
    position: static !important;
    text-align: center !important;
    width: auto !important;
    color: rgba(255, 255, 255, 0.65) !important;
}

@media (max-width: 992px) {
    .table tr > * {
        padding: 0 20px;
        padding: 0px 0px 0px 50px;
    }
    /* .table tr > *:nth-child(1) {
        padding-right: 20px;
    } */
    /* .table tr > *:nth-child(2) {
        left: 38px;
    } */
    
    .table tr > :last-child {
        padding-right: 0;
    }
}

@media (max-width:768px ) {
    .table tr > *:nth-child(1) {
        padding-right: 10px;
    }
    .table tr > *:nth-child(2) {
        left: 28px;
        padding-right: 15px;
    }
}

@media (max-width: 480px) {
    .table tr > * {
        padding: 0px 0px 0px 60px;
    }
   
    .table tr > *:nth-child(3) {
        padding-right: 0px;
        padding-left: 20px;
        min-width: 0;
    }
}
@media (max-width: 380px) {
    .table tr > *:nth-child(3) {
        padding-left: 17px;
    }
    .table tr > * {
      font-size: 14px;
    }
    .table tr > * {
        font-size: 15px;
    }
}

